--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My Website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Personal portfolio website showcasing professional experience and projects.">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is my first webpage.</p>
+    <header>
+        <h1>Welcome to My Portfolio</h1>
+        <nav>
+            <a href="#about">About Me</a>
+            <a href="#experience">Experience</a>
+            <a href="https://example.com/resume.pdf" target="_blank">Resume</a>
+        </nav>
+    </header>
+
+    <div id="about" class="section">
+        <h2>About Me</h2>
+        <p class="description">Hello! My name is David Fasasi, and I am an Electrical and Computer Engineering Honors student at The University of Texas at Austin. I am passionate about the fields of technology and innovation, where I thrive on solving problems and creating impactful solutions! I'm particularly interested in the realms of software engineering, product management, and machine learning. Let’s connect and make a difference together!</p>
+        <img src="David-F.jpg" alt="Profile Picture" class="profile-img">
+    </div>
+
+    <div id="experience" class="section">
+        <h2>Experience</h2>
+        <ul>
+            <li class="job">Software Engineer Intern at Salesforce</li>
+            <li class="job">Technical Architect Intern at Left Lane Technologies</li>
+            <li class="job">Software Engineer Intern at Runz Technologies</li>
+        </ul>
+    </div>
+
+    <footer>
+        <p>Connect with me on <a href="https://www.linkedin.com/in/david-fasasi-47907a24b/" target="_blank" class="link">LinkedIn</a></p>
+    </footer>
 </body>
 </html>
