--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Personal portfolio website showcasing professional experience and projects.">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
+        <h1>David Fasasi's Portfolio</h1>
         <nav>
             <a href="#about">About Me</a>
             <a href="#experience">Experience</a>
-            <a href="https://example.com/resume.pdf" target="_blank">Resume</a>
+            <!-- Resume section here in the future?-->
         </nav>
     </header>
 
     <div id="about" class="section">
         <h2>About Me</h2>
         <p class="description">Hello! My name is David Fasasi, and I am an Electrical and Computer Engineering Honors student at The University of Texas at Austin. I am passionate about the fields of technology and innovation, where I thrive on solving problems and creating impactful solutions! I'm particularly interested in the realms of software engineering, product management, and machine learning. Let’s connect and make a difference together!</p>
-        <img src="David-F.jpg" alt="Profile Picture" class="profile-img">
+        <img src="David-F.jpg" alt="Profile Picture" style="width:537px;height: 822px;" class="profile-img">
     </div>
 
     <div id="experience" class="section">
