--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="about" class="section">
         <h2>About Me</h2>
         <p class="description">Hello! My name is David Fasasi, and I am an Electrical and Computer Engineering Honors student at The University of Texas at Austin. I am passionate about the fields of technology and innovation, where I thrive on solving problems and creating impactful solutions! I'm particularly interested in the realms of software engineering, product management, and machine learning. Let’s connect and make a difference together!</p>
-        <img src="David-F.jpg" alt="Profile Picture" style="width:537px;height: 822px;" class="profile-img">
+        <img src="David-F.jpg" alt="Profile Picture" style="width:537px;height: 822px;" class="center">
     </div>
 
     <div id="experience" class="section">
