--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <footer>
-        <p>Connect with me on <a href="https://www.linkedin.com/in/david-fasasi-47907a24b/" target="_blank" class="link">LinkedIn</a></p>
+        <p style="text-align: center;font-weight: bold;">Connect with me on <a href="https://www.linkedin.com/in/david-fasasi-47907a24b/" target="_blank" class="link">LinkedIn</a></p>
     </footer>
 </body>
 </html>
